[gd_scene load_steps=45 format=3 uid="uid://v6t73n2jf2xb"]

[ext_resource type="Script" path="res://Scripts/Dobby.gd" id="1_7y735"]
[ext_resource type="PackedScene" uid="uid://pylcx5rd8k7o" path="res://Scenes/illusion.tscn" id="2_1nwm4"]
[ext_resource type="PackedScene" uid="uid://b3r8vnwofy55d" path="res://Scenes/placement_camera.tscn" id="3_mn8jy"]
[ext_resource type="Texture2D" uid="uid://bjqls2y0nynwk" path="res://Sprites/dobby-ability.png" id="4_h1dli"]
[ext_resource type="Texture2D" uid="uid://buqjq3j3cbeu5" path="res://Sprites/dobby 16x16_run_sheet_final.png" id="4_kxc0c"]
[ext_resource type="Texture2D" uid="uid://c8w2vk2bhmjrl" path="res://Sprites/dobby 16x16_idle_sheet_final.png" id="4_l0fkh"]
[ext_resource type="Texture2D" uid="uid://cinj4gg6imm2p" path="res://Sprites/npc_idle.png" id="7_g3mxd"]
[ext_resource type="Texture2D" uid="uid://b8jrro1rxuy27" path="res://Sprites/npc_walk.png" id="8_yet8j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3gn5t"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i6a6k"]
atlas = ExtResource("4_h1dli")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1xc8"]
atlas = ExtResource("4_h1dli")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iq8t"]
atlas = ExtResource("4_h1dli")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvvdp"]
atlas = ExtResource("4_h1dli")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqwao"]
atlas = ExtResource("4_h1dli")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ksnn"]
atlas = ExtResource("4_h1dli")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a3kv"]
atlas = ExtResource("4_h1dli")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t404e"]
atlas = ExtResource("4_h1dli")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_spwf3"]
atlas = ExtResource("4_h1dli")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj6v8"]
atlas = ExtResource("4_h1dli")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6udvq"]
atlas = ExtResource("4_l0fkh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfcvu"]
atlas = ExtResource("4_l0fkh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc6kg"]
atlas = ExtResource("4_l0fkh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yletq"]
atlas = ExtResource("4_l0fkh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5s7k"]
atlas = ExtResource("4_kxc0c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwsk8"]
atlas = ExtResource("4_kxc0c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ij0y"]
atlas = ExtResource("4_kxc0c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_et7qq"]
atlas = ExtResource("4_kxc0c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_v3p6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6a6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1xc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iq8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvvdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqwao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ksnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a3kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t404e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spwf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj6v8")
}],
"loop": true,
"name": &"cast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6udvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfcvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc6kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yletq")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5s7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwsk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ij0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et7qq")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5s7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwsk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ij0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et7qq")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xy8xo"]
atlas = ExtResource("7_g3mxd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef5ce"]
atlas = ExtResource("7_g3mxd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj15q"]
atlas = ExtResource("7_g3mxd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3agdw"]
atlas = ExtResource("7_g3mxd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uaer"]
atlas = ExtResource("8_yet8j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t26j5"]
atlas = ExtResource("8_yet8j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofckm"]
atlas = ExtResource("8_yet8j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io51g"]
atlas = ExtResource("8_yet8j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1krm"]
atlas = ExtResource("8_yet8j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w53t"]
atlas = ExtResource("8_yet8j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qmgc"]
atlas = ExtResource("8_yet8j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kawq"]
atlas = ExtResource("8_yet8j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwtpd"]
atlas = ExtResource("8_yet8j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm4r5"]
atlas = ExtResource("8_yet8j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t2rhf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy8xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef5ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj15q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3agdw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uaer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t26j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofckm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io51g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1krm")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w53t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qmgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kawq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwtpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm4r5")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4nybe"]
radius = 15.0

[node name="Dobby" type="CharacterBody2D"]
position = Vector2(2, 0)
collision_mask = 11
script = ExtResource("1_7y735")
distraction_dummy_scene = ExtResource("2_1nwm4")
placement_camera_scene = ExtResource("3_mn8jy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3gn5t")

[node name="Dobby_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(3.8147e-06, -1.90735e-06)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_v3p6a")
animation = &"idle"
frame_progress = 0.91058

[node name="disguise" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, 1)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_t2rhf")
animation = &"walk"
frame_progress = 0.70578

[node name="Illusion cooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Disguise cooldown" type="Timer" parent="."]
wait_time = 20.0

[node name="Disguise timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Steal" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Steal"]
shape = SubResource("CircleShape2D_4nybe")

[node name="MouseRayCast" type="RayCast2D" parent="."]
collision_mask = 8

[connection signal="timeout" from="Illusion cooldown" to="." method="_on_illusion_cooldown_timeout"]
[connection signal="timeout" from="Disguise cooldown" to="." method="_on_disguise_cooldown_timeout"]
[connection signal="timeout" from="Disguise timer" to="." method="_on_disguise_timer_timeout"]
[connection signal="body_entered" from="Steal" to="." method="_on_steal_body_entered"]
[connection signal="body_exited" from="Steal" to="." method="_on_steal_body_exited"]
